--- a/layouts/indexes/post.html.erb
+++ b/layouts/indexes/post.html.erb
@@ -1,9 +1,5 @@
-<html>
-<body>
-<h1><%= site.title %></h1>
-
+<%= render 'chrome/_header' %>
 <% pages.sort_by{|page| page.date}.reverse_each do |page| %>
-  <p><%= template.render(self, :site => site, :page => page) %></p>
+  <%= render 'post/_post', :page => page %>
 <% end %>
-</body>
-</html>
+<%= render 'chrome/_footer' %>
