--- a/layouts/post/single.html.erb
+++ b/layouts/post/single.html.erb
@@ -1,105 +1,3 @@
-<html>
-<body>
-<h1><a href="<%= page.permalink %>"><%= page.title %></a></h1>
-<p><%= page.content %></p>
-</body>
-</html>
-
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="<%= site.title %>">
-
-<title><%= site.title %></title>
-
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure.css">
-  
-<!--[if lte IE 8]>
-  <link rel="stylesheet" href="/css/main-grid-old-ie.css">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-  <link rel="stylesheet" href="/css/main-grid.css">
-<!--<![endif]-->
-  
-<!--[if lte IE 8]>
-  <link rel="stylesheet" href="/css/layouts/blog-old-ie.css">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-  <link rel="stylesheet" href="/css/layouts/blog.css">
-<!--<![endif]-->
-</head>
-<body>
-
-<div id="layout" class="pure-g">
-    <div class="sidebar pure-u-1 pure-u-med-1-4">
-        <div class="header">
-            <hgroup>
-                <h1 class="brand-title"><%= site.title %></h1>
-                <h2 class="brand-tagline">Subtitle</h2>
-            </hgroup>
-
-            <nav class="nav">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a class="pure-button" href="http://purecss.io">Pure</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="pure-button" href="http://yuilibrary.com">YUI Library</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-
-    <div class="content pure-u-1 pure-u-med-3-4">
-        <div>
-            <!-- A wrapper for all the blog posts -->
-            <div class="posts">
-                <!-- <h1 class="content-subhead">Pinned Post</h1> -->
-
-                <!-- A single blog post -->
-                <section class="post">
-                    <header class="post-header">
-                        <h2 class="post-title"><a href="<%= page.permalink %>"><%= page.title %></a></h2>
-
-                        <p class="post-meta">
-                            By <a href="#" class="post-author">Michael Neumann</a> 
-                            under <a class="post-category post-category-design" href="#">CSS</a> <a class="post-category post-category-pure" href="#">Pure</a>
-                        </p>
-                    </header>
-
-                    <div class="post-description">
-                        <p><%= page.content %></p>
-                    </div>
-                </section>
-            </div>
-
-            <div class="footer">
-                <div class="pure-menu pure-menu-horizontal pure-menu-open">
-                    <ul>
-                        <li><a href="http://purecss.io/">About</a></li>
-                        <li><a href="http://twitter.com/yuilibrary/">Twitter</a></li>
-                        <li><a href="http://github.com/yui/pure/">GitHub</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="http://yui.yahooapis.com/3.14.1/build/yui/yui.js"></script>
-<script>
-YUI().use('node-base', 'node-event-delegate', function (Y) {
-    // This just makes sure that the href="#" attached to the <a> elements
-    // don't scroll you back up the page.
-    Y.one('body').delegate('click', function (e) {
-        e.preventDefault();
-    }, 'a[href="#"]');
-});
-</script>
-
-
-</body>
-</html>
+<%= render 'chrome/_header' %>
+<%= render 'post/_post', :page => page %>
+<%= render 'chrome/_footer' %>
