--- a/layouts/chrome/_header.html.erb
+++ b/layouts/chrome/_header.html.erb
@@ -1,53 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="<%= site.title %>">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="/favicon.ico">
 
-<title><%= site.title %></title>
+    <title><%= site.title %></title>
 
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure.css">
-  
-<!--[if lte IE 8]>
-  <link rel="stylesheet" href="/css/main-grid-old-ie.css">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-  <link rel="stylesheet" href="/css/main-grid.css">
-<!--<![endif]-->
-  
-<!--[if lte IE 8]>
-  <link rel="stylesheet" href="/css/layouts/blog-old-ie.css">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-  <link rel="stylesheet" href="/css/layouts/blog.css">
-<!--<![endif]-->
-</head>
-<body>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-<div id="layout" class="pure-g">
-    <div class="sidebar pure-u-1 pure-u-med-1-4">
-        <div class="header">
-            <hgroup>
-                <h1 class="brand-title"><%= site.title %></h1>
-                <h2 class="brand-tagline">Subtitle</h2>
-            </hgroup>
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
-            <nav class="nav">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a class="pure-button" href="http://purecss.io">Pure</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="pure-button" href="http://yuilibrary.com">YUI Library</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+
+    <!-- Custom styles for this template -->
+    <link href="/css/blog.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="blog-masthead">
+      <div class="container">
+        <nav class="blog-nav">
+          <a class="blog-nav-item active" href="#">Home</a>
+          <a class="blog-nav-item" href="#">New features</a>
+          <a class="blog-nav-item" href="#">Press</a>
+          <a class="blog-nav-item" href="#">New hires</a>
+          <a class="blog-nav-item" href="#">About</a>
+        </nav>
+      </div>
     </div>
 
-    <div class="content pure-u-1 pure-u-med-3-4">
-        <div>
-            <!-- A wrapper for all the blog posts -->
-            <div class="posts">
-                <!-- <h1 class="content-subhead">Pinned Post</h1> -->
+    <div class="container">
+
+<!--
+      <div class="blog-header">
+        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
+      </div>
+-->
+
+      <div class="row">
+
+        <div class="col-sm-8 blog-main">
+
